--- a/FAIme-ubuntu/hints.html
+++ b/FAIme-ubuntu/hints.html
@@ -1,12 +1,1 @@
-	      <div class="col s12">
-		<ul class="browser-default">
-		  <li>You should change the user and root password after installation</li>
-		  <li>For the keyboard layout we assume Generic 105-key PC</li>
-		  <li>To change the keyboard layout call
-		    <code>dpkg-reconfigure keyboard-configuration</code>
-		  </li>
-		  <li>The timezone will be set to UTC. To change the timezone call
-		    <code>dpkg-reconfigure tzdata</code>
-		  </li>
-		</ul>
-	      </div>
+../FAIme/hints.html
