--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col s12">
             <h5>About <a href="/FAIme">FAI.me</a> </h5>
-            <p>FAI.me is a build service to create custom installation images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
+            <p>FAI.me is a web based build service to create custom installation images or ready-to-boot disk images for desktops, server, virtual machines or cloud-computing platforms.
             </p>
 
           </div>
@@ -55,7 +55,7 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
-<li>[April 11, 2023] The FAIme build service now supports Ubuntu</li>
+<li>[April 11, 2023] The FAIme image builder now supports Ubuntu</li>
 <li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</li>
 <li>[Jan 13, 2023] FAI 6.0 released and <a href="https://fai-project.org/fai-cd/index2.html">new ISO images</a> availabe</li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</li>
@@ -75,7 +75,7 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
             <ul>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, CentOS, RHEL, SUSE, ...</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Installs Debian, Ubuntu, Rocky Linux, CentOS, Rocky Linux, RHEL, SUSE, ...</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
