--- a/reports/index.html
+++ b/reports/index.html
@@ -61,7 +61,7 @@ How do you boot your hosts?
 Does the default install kernel recognize all your hardware? yes
 Which drivers are missing? none
 Do you manage your configuration space under version control? yes, in git.
-How big is your config space (Mbytes, # of files)? 7.2M
+How big is your config space (Mbytes, # of files)? 7.2M, #502
 How many files do you have in ../config/files? 341
 
 What types of scripts are you using for local customization? bash, perl, python
@@ -75,6 +75,11 @@ Using both single-host ``ssh root@client fai softupdate`` and
 fai-updater (<a href="https://github.com/glaweh/fai-updater">https://github.com/glaweh/fai-updater</a>) to broadcast fai softupdates.
 
 <a href="pictures/fai-updater.png"><img alt="FAI updater" src="pictures/fai-updater.png" width=400></a>&nbsp;<a href="pictures/fai-updater-with-log.png"><img alt="FAI updater with log" src="pictures/fai-updater-with-log.png" width=400></a>
+
+Maybe also interesting for the $FAI/files statistics:
+Number of file-modes: 83
+Number of preinst scripts: 19
+Number of postinst scripts: 34
 </pre> <HR>
 
 
