--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -11,7 +11,8 @@
 		  <option value="fr">French / Français</option>
 		  <option value="de">German / Deutsch</option>
 		  <option value="pl">Polish / Polski</option>
-		  <option value="pt">Portuguese / Português</option>
+		  <option value="pt">Portuguese BR / Português</option>
+		  <option value="br">Portuguese PT / Português</option>
 		  <option value="ru">Russian / Pу́сский</option>
 		  <option value="es">Spanish / Español</option>
 		  <option value="tr">Turkish / Türkçe</option>
