minimal change to text

--- a/FAIme/root.html
+++ b/FAIme/root.html
@@ -10,7 +10,7 @@
 
 	      <div class="col s12 m10">
 		<p class="col s12 m6">
-                  Upload SSH keys for the root account.<br> Upload a file,
+                  Upload SSH keys for the root account.<br> Upload a file or
 		  use an username for github, gitlab or Debian gitlab or
 		  specify a custom download URL.
 		</p>
