--- a/references/index.html
+++ b/references/index.html
@@ -137,6 +137,8 @@
           <img class="imgframe" alt="FAI user" src="pics/platon-technologies.png" ></a>
         <a href="https://www.ocadogroup.com/technology/technology-pioneers">
           <img class="imgframe" alt="FAI user" src="pics/ocado.png" ></a>
+        <a href="https://www.mpsd.mpg.de">
+          <img class="imgframe" alt="FAI user" src="pics/mpsd.png" ></a>
 
         <p>
           There are
