--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -34,9 +34,11 @@ contact before you start working.
 <h3>Topics for FAI 6.X</h3>
 <ul class="col s12 browser-default">
 --- TODO ---
-<li> add Ubuntu support to FAI.me service (postponed)
 <li> relax and recover from testing and release process!
 <br>    --- DONE ---
+<li> add Live ISO support to fai-cd
+<li> Use systemd when booting the FAI environment
+<li> add Ubuntu support to FAI.me service
 <li> support target release in package_config
 <li> use zstd instead of gzip
 <li> partition label and partition uuid support in setup-storage
@@ -53,7 +55,7 @@ classes, date of last fai action
 <br>
 <HR>
 <ADDRESS>
-  Fri, 26 Aug 2022 22:46:04 +0200
+ Wed, 07 Jun 2023 11:07:54 +0200
 </ADDRESS>
 
 
