--- a/talks/index.html
+++ b/talks/index.html
@@ -152,14 +152,15 @@ href="http://meetings-archive.debian.net/pub/debian-meetings/2017/mini-debconf-c
 </a> (in German) during GUUG-Frühjahrsfachgespräch 2019 (from 0:35:30)</li>
 
 <li> FrOSCon 2019: talk in German about FAI.me service (<a href="../doc/froscon2019.pdf">slides</a>, <a href="https://media.ccc.de/v/froscon2019-2341-faime_ein_service_fur_individuelle_installationen">video</a>)
+
+<li> <a href="https://wiki.debian.org/DebianEvents/de/2023/DebianReunionHamburg/
+">DebianReunionHamburg 2023</a>: I gave a talk about "Looking at some web statistics of www.debian.org"
+
 </ul>
-
-
-
 <p>
 
 <ADDRESS>
-Mon, 12 Aug 2019 10:17:21 +0200
+Wed, 07 Jun 2023 23:39:35 +0200
 </ADDRESS>
 
 
