--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.iso">
-              <i class="material-icons left">download</i>ISO (1.3GB)</a>
+            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.3.iso">
+              <i class="material-icons left">download</i>ISO (1.8GB)</a>
           </div>
 
         </div>
@@ -55,9 +55,9 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[Jun 10, 2023] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.0.3</li>
 <li>[April 11, 2023] The FAIme image builder now supports Ubuntu</li>
 <li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</li>
-<li>[Jan 13, 2023] FAI 6.0 released and <a href="https://fai-project.org/fai-cd/index2.html">new ISO images</a> availabe</li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
