update stable, testing, olstable names

--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -32,11 +32,11 @@
 	      <div class="col s12 m6">
 		<div class="input-field">
 		  <select class="browser-default" name="suite">
-		    <option value="buster">Debian 10 buster (oldstable)
+		    <option value="buster">Debian 10 buster (oldoldstable)
 		    </option>
-		    <option value="bullseye" selected="selected">Debian 11 bullseye (stable)
+		    <option value="bullseye">Debian 11 bullseye (oldstable)
 		    </option>
-		    <option value="bookworm">Debian 12 bookworm (testing)
+		    <option value="bookworm" selected="selected">Debian 12 bookworm (stable)
 		    </option>
 		  </select>
 		</div>
