--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -99,6 +99,10 @@ dd if=faicd64-large_6.0.3.iso of=/dev/sdx
               </li>
               <li>
                 <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>User/Password: demo/fai</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
                   <i class="material-icons">done</i>&nbsp;<span>No network is needed and you can install the whole system from the installation media.</span></span>
               </li>
 
@@ -143,8 +147,8 @@ dd if=faicd64-large_6.0.3.iso of=/dev/sdx
           <div class="col s12">
             <h5>Debian Live ISO created by FAI</h5>
 
-            <a href="debian11-live-xfce.iso">Live CD</a>
-            using Debian 11 (bullseye) ,
+            <a href="debian12-live-xfce.iso">Live CD</a>
+            using Debian 12 (bookworm) ,
             <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
           </div>
         </div>
