--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
 
 <ul class="col s12 browser-default">
 <li>[Jun 10, 2023] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.0.3</li>
+<li>[Jun 10, 2023] A <a href="/fai-cd/debian12-live-xfce.iso">new Debian Live ISO images</a>
+build by FAI with XFCE desktop</li>
 <li>[April 11, 2023] The FAIme image builder now supports Ubuntu</li>
 <li>[Feb 09, 2023] The FAIme build service now supports Debian 12 aka bookworm using FAI 6.0</li>
 <li>[Jan 21, 2021] FAIme now adds non-free firmware needed for wireless cards</li>
