--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -78,9 +78,8 @@
 	      </p>
 	      <div class="col s5 m3">
                 <select class="browser-default" name="format" >
-            <option value="raw.xz" > raw.xz</option>
             <option value="raw.zst" selected="selected"> raw.zst</option>
-            <option value="qcow2"> qcow2</option>
+            <option value="qcow2.zst"> qcow2.zst</option>
             <option value="vdi"> vdi</option>
             <option value="vhdx"> vhdx</option>
             <option value="vmdk"> vmdk</option>
