--- a/FAIme/cloud/index.html
+++ b/FAIme/cloud/index.html
@@ -44,8 +44,8 @@
 	    </h5>
             <h6>
               <ul class="browser-default">
-                <li><a href="../FAIme">Debian installation ISO</a><p></li>
-                <li><a href="../FAIme-ubuntu">Ubuntu installation ISO</a></li>
+                <li><a href="../../FAIme">Debian installation ISO</a><p></li>
+                <li><a href="../../FAIme-ubuntu">Ubuntu installation ISO</a></li>
               </ul>
             </h6>
 
