move images to pics/

--- a/footer.html
+++ b/footer.html
@@ -1,2 +1,2 @@
-<div class="footer" style='background: url("/images/body_bg.gif") repeat-x 0 100%;min-height: 50px'>
+<div class="footer" style='background: url("/pics/body_bg.gif") repeat-x 0 100%;min-height: 50px'>
 </div>
