--- a/sidenav.html
+++ b/sidenav.html
@@ -1,5 +1,5 @@
 <div class="navbar-fixed">
-  <nav style='background: url("/images/sprites.png") repeat-x 0 100%;margin: 0 0 25px;padding: 0 0 8px;box-shadow: none'>
+  <nav style='background: url("/pics/sprites.png") repeat-x 0 100%;margin: 0 0 25px;padding: 0 0 8px;box-shadow: none'>
     <div class="nav-wrapper">
       <a href="/" class="brand-logo center">
 
