--- a/contact/index.html
+++ b/contact/index.html
@@ -29,7 +29,7 @@
 <li>Thomas Lange is the main author of FAI. He's a Debian Developer
   since 2000 and a sysadmin since 1992. He started the FAI project in 1999.</li>
 
-<li><a href="https://visva.cs.uni-koeln.de/team/lange">Personal web page</a></li>
+<li><a href="https://visva.cs.uni-koeln.de/team/thomas-lange">Personal web page</a></li>
 <li>Mail: lange =@= fai-project dOt org</li>
 <li>IRC: Mrfai on channel #fai</li>
 <li><a href="/talks/">FAI Talks</a> of Thomas</li>
