--- a/reports/index.html
+++ b/reports/index.html
@@ -46,7 +46,7 @@ Which version are you using as your install kernel? 5.10.0-15-amd64
 Which types of hosts are you installing with fai?
     desktops: 1
     laptops: 57
-    buildbot workers (CI for https://octopus-code.org, amd64 and ppc64el, some with nVidia GPGPU): 32
+    buildbot workers (CI for <a href="https://octopus-code.org">https://octopus-code.org</a>, amd64 and ppc64el, some with nVidia GPGPU): 32
     HPC nodes (amd64, some with nVidia Tesla nVlink): 43
     Proxmox hypervisors: 3 active + 1 standby
     NAT routers: 1
