--- a/references/index.html
+++ b/references/index.html
@@ -139,6 +139,8 @@
           <img class="imgframe" alt="FAI user" src="pics/ocado.png" ></a>
         <a href="https://www.mpsd.mpg.de">
           <img class="imgframe" alt="FAI user" src="pics/mpsd.png" ></a>
+        <a href="https://lfenergy.org/projects/seapath">
+          <img class="imgframe" alt="FAI user" src="pics/seapath.png" ></a>
 
         <p>
           There are
