replace broken link

--- a/otherdocs/index.html
+++ b/otherdocs/index.html
@@ -387,7 +387,7 @@ Short documentation</a> about FAI and etch.
 <li> <b>Romanian, Rumanian</b>
 <ul>
 
-<li> The <a href="http://blip.tv/file/4493047/">video of a talk</a> about FAI at the Romanian RLUG meeting, December 2010.
+<li> The <a href="https://wiki.lug.ro/index.php/%C3%8Ent%C3%A2lnirea_RLUG_Decembrie_%2710">Talk</a> about FAI at the Romanian RLUG meeting, December 2010.
 
 
 </ul>
