root pw can also be a hash

--- a/FAIme/root.html
+++ b/FAIme/root.html
@@ -1,6 +1,6 @@
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
-		  Root password
+		  Root password (or the hash)
 		</p>
 		<div class="input-field col s12 m6">
 		  <input type="text" id="rootpw" name="rootpw">
