--- a/FAIme/user_name_pw.html
+++ b/FAIme/user_name_pw.html
@@ -12,7 +12,7 @@
 	    <!-- UserPW Select -->
 	    <div class="col s12 m10">
 	      <p class="col s12 m4">
-		User password
+		User password (or the hash)
 	      </p>
 	      <div class="input-field col s12 m6">
 		<input id="pwd" name="userpw" type="text">
