add checkbox for recommends

--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -121,7 +121,16 @@
 	      <div class="col s12 m6 input-field">
 		<textarea name="addpkgs" class="materialize-textarea"></textarea>
 		<span class="helper-text">Separate with spaces, multiple names on one line are fine</span>
-	      </div>
+              </div>
+	      <p class="col s12 m4">
+                <br> <br>
+	      </p>
+	      <div class="col s12 m6 input-field">
+		<label>
+		  <input type="checkbox" class="filled-in" name="cl9" value="RECOMMENDS">
+		  <span class="helper-text">Enable recommended packages for your custom package list</span>
+		</label>
+              </div>
 	    </div>
 
 	    <!-- Optional Email input -->
