explain in more detail

--- a/FAIme/index.html
+++ b/FAIme/index.html
@@ -94,16 +94,18 @@
 
 	      <div class="col s12 m10">
 		<p class="col s12 m4">
-		  Add one public available Debian package repository
+		  You can add one public available Debian package repository
 		</p>
 		<div class="col s12 m6 input-field">
 		  <input type="text" id="repo" name="repo">
 		  <span class="helper-text">
 		    Only http(s) is allowed. Examples:
 		    <br>
-		    http://download.proxmox.com/debian/pve bullseye pve-no-subscription
+		    http://download.proxmox.com/debian/pve bookworm pve-no-subscription
 		    <br>
-		    https://download.docker.com/linux/debian bullseye stable
+		    https://download.docker.com/linux/debian bookworm stable
+		    <br>
+		    The default Debian repositories are automatically added.
 		  </span>
 		</div>
 	      </div>
