new release 6.2, new ISOs

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           </div>
           <div class="col s4">
 
-            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.0.3.iso">
+            <a class="waves-effect waves-light fai-btn btn-large valign right black-text z-depth-3" style="font-size: 170%" href="/fai-cd/faicd64-large_6.2.iso">
               <i class="material-icons left">download</i>ISO (1.8GB)</a>
           </div>
 
@@ -55,6 +55,7 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
 <li>[Jun 10, 2023] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.0.3</li>
 <li>[Jun 10, 2023] A <a href="/fai-cd/debian12-live-xfce.iso">new Debian Live ISO images</a>
 build by FAI with XFCE desktop</li>
