--- a/fai-cd/fai-cd-old.html
+++ b/fai-cd/fai-cd-old.html
@@ -20,43 +20,43 @@
     <main>
       <div class="container">
         <div class="row">
-          <h2 class="col s12">OLD Images using FAI 5.10.3</h4>
           <h4 class="col s12">FAI CD: The Easy Way to Start With FAI</h4>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-large_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO large (1.2GB)</a>
+              <a href="faicd64-large_6.0.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO large (1.8GB)</a>
             </div>
             <p class="col m7 s12">
-              The default image. Includes all packages for XFCE and GNOME but only the basefiles for CentOS 8 and Ubuntu 20.04
+              The default image. Includes all packages for the XFCE
+              and GNOME desktop but only the basefiles for Rocky Linux 9 and Ubuntu 22.04
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-small_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO small (674MB)</a>
+              <a href="faicd64-small_6.0.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO small (875MB)</a>
             </div>
             <p class="col m7 s12">
-              Only the XFCE packages are included. Other packages and basefiles are downloaded from the internet.
+              Includes packages for a stripped down XFCE desktop (without libreoffice). Other packages and basefiles are downloaded from the internet.
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-ubuntu-only_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.3GB)</a>
+              <a href="faicd64-ubuntu-only_6.0.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.7GB)</a>
             </div>
             <p class="col m7 s12">
-              This image only installs Ubuntu 20.04 LTS. All packages are included.
+              This image only installs Ubuntu 22.04 LTS. All packages are included.
             </p>
           </div>
 
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
-              <a href="faicd64-autodiscover_5.10.3.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>Autodiscover CD (38MB)</a>
+              <a href="faicd64-autodiscover_6.0.3.iso" class="waves-effect waves-light btn fai-btn black-text">
+                <i class="material-icons left">download</i>Autodiscover CD (49MB)</a>
             </div>
             <p class="col m7 s12">
               Boot only image which autodiscovers the FAI server.
@@ -64,7 +64,7 @@
           </div>
 
           <p class="col s12">
-            All installation images use Debian 11 aka bullseye, FAI 5.10.3, kernel 5.10, amd64 architecture,
+            All installation images use Debian 12 aka bookworm, FAI 6.0.3, kernel 6.1, amd64 architecture,
             <a href="sha256sums.asc">sha256sum.asc</a>
             of the ISO's. They can boot from CD/DVD or USB stick with legacy BIOS or UEFI.
           </p>
@@ -83,7 +83,7 @@
             You can write the ISO image onto a USB stick using the command dd(1) and replace /dev/sdX with the name of your USB device (e.g. /dev/sdf):
 
 <pre><code>
-dd if=faicd64-large_5.10.3.iso of=/dev/sdx
+dd if=faicd64-large_6.0.3.iso of=/dev/sdx
 </code></pre>
 
           </div>
@@ -95,7 +95,11 @@ dd if=faicd64-large_5.10.3.iso of=/dev/sdx
             <ul>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>These installation images can install Debian 11 (XFCE and GNOME), Ubuntu 20.04 and CentOS 8, without the need of an install server</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>These installation images can install Debian 12 (XFCE and GNOME), Ubuntu 22.04 and Rocky Linux 9, without the need of an install server</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>User/Password: demo/fai</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
@@ -143,11 +147,12 @@ dd if=faicd64-large_5.10.3.iso of=/dev/sdx
           <div class="col s12">
             <h5>Debian Live ISO created by FAI</h5>
 
-            <a href="debian11-live-xfce.iso">Live CD</a>
-            using Debian 11 (bullseye) ,
+            <a href="debian12-live-xfce.iso">Live CD</a>
+            using Debian 12 (bookworm) ,
             <a href="https://wiki.fai-project.org/index.php/Use_nfsroot_for_diskless_clients">documentation</a>
           </div>
         </div>
+
       </div>
     </main>
 
