update to bookworm

--- a/download/index.html
+++ b/download/index.html
@@ -38,7 +38,7 @@ The FAI software is divided in several packages:
 Entry for /etc/apt/sources.list and for /etc/fai/apt/sources.list:
 <p>
 <pre><code class="language-bash">
-deb https://fai-project.org/download bullseye koeln
+deb https://fai-project.org/download bookworm koeln
 </code></pre>
 
 
@@ -52,7 +52,7 @@ $ sudo cp fai-project.gpg /etc/apt/trusted.gpg.d/
 
 <p>
 
-FAI packages from the official <a href=" https://fai-project.org/download/bullseye/">project repository</A> or
+FAI packages from the official <a href=" https://fai-project.org/download/bookworm/">project repository</A> or
 from a <a href=https://deb.debian.org/debian/pool/main/f/fai/>Debian mirror</a>.
 
 <p>
