--- a/reports/index.html
+++ b/reports/index.html
@@ -87,7 +87,7 @@ https://github.com/seapath/ansible/tree/debian-main.
 The only configuration we do is to add default credentials (users/ssh
 keys) and default networking, so that we can connect to the server
 directly after deployment.
-I have a <a href="https://www.youtube.com/watch?v=VrA5nVihIqQ">video tutorial about this.
+I have a <a href="https://www.youtube.com/watch?v=VrA5nVihIqQ">video tutorial about this.</a>
 </pre> <HR>
 
 
