--- a/reports/index.html
+++ b/reports/index.html
@@ -34,6 +34,36 @@ Currently we have more than 300 detailed reports. Please also fill out the <a hr
 <hr>
 <div>
 
+<b>From:</b> Ralf Aumüller
+<br><b>Date:</b> Thu, 21 Dec 2023 14:43:48 +0100
+<pre>
+How many hosts have you installed using fai? <b>100+</b>
+Which version of fai are you using? <b>6.0.3+deb12u1</b>
+Which version are you using as your install kernel? plain Debian kernel
+
+Which types of hosts are you installing with fai? desktops, cluster nodes, notebooks, servers
+
+How do you boot your hosts?
+  via network (PXE, DHCP): Yes
+             using FAI-CD: No
+           from USB stick: No
+
+Does the default install kernel recognize all your hardware? Yes
+Which drivers are missing? none
+
+Do you manage your configuration space under version control? No.
+
+How big is your config space (Mbytes, # of files)?
+I use a separate config space for each distrib-Version.
+  Ubuntu 20.04 | 3.4M | 290 (including backups)
+  Ubuntu 22.04 | 2.2M | 212 (including backups)
+
+What types of scripts are you using for local customization? Mainly shell and some perl scripts
+
+<b>What is the business of your company/organisation?</b> university, computer science
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Fri, 01 Sep 2023 09:48:50 +0000
 <pre>
