--- a/roadmap/index.html
+++ b/roadmap/index.html
@@ -33,9 +33,9 @@ contact before you start working.
 <br>
 <h3>Topics for FAI 6.X</h3>
 <ul class="col s12 browser-default">
---- TODO ---
+<li style='list-style-type: none'> --- TODO ---
 <li> relax and recover from testing and release process!
-<br>    --- DONE ---
+<li style='list-style-type: none'> --- DONE ---
 <li> add Live ISO support to fai-cd
 <li> Use systemd when booting the FAI environment
 <li> add Ubuntu support to FAI.me service
@@ -46,16 +46,15 @@ contact before you start working.
 <li> UEFI support for fai-cd
 <li> add grub cmdline options to FAI.me service
 <li> btrfs and NVMe support for setup-storage
-<br> --- LONG TERM ---
+<li style='list-style-type: none'> --- LONG TERM ---
 <li> zfs support?
 <li> fai-monitor-gui: new option, remove host if everything went fine
 <li> add option -l to fai command. List status of fai. Show list of
 classes, date of last fai action
 </ul>
 <br>
-<HR>
 <ADDRESS>
- Wed, 07 Jun 2023 11:07:54 +0200
+ Mon, 26 Feb 2024 10:21:14 +0100
 </ADDRESS>
 
 
