--- a/reports/index.html
+++ b/reports/index.html
@@ -64,6 +64,39 @@ What types of scripts are you using for local customization? Mainly shell and so
 </pre> <HR>
 
 
+<b>From:</b> Robert Wooden
+<br><b>Date:</b> Sat, 9 Dec 2023 08:20:57 -0500
+<pre>
+Are you using the FAI.me build service? yes
+How many hosts have you installed using fai? <b>Two, so far</b>
+Which version of fai are you using? <b>6.0.X</b>
+Which version are you using as your install kernel? Default Debian 12
+
+Which types of hosts are you installing with fai? Headless Folding at Home (small farm)
+
+How do you boot your hosts? Currently ISO image for VirtualBox. Soon via USB stick
+                            Via USB stick on any other machines (not VM.)
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+Do you manage your configuration space under version control? Via ssh
+
+Does the default install kernel recognize all your hardware? yes
+Which drivers are missing? none
+Do you manage your configuration space under version control? Via ssh
+How big is your config space (Mbytes, # of files)? 72k, #8
+How many files do you have in ../config/files? 0
+What types of scripts are you using for local customization? none
+
+<b>What is the business of your company/organisation?</b> Personal use running Folding at Home studying Alzheimer's disease.
+<br><b>Additional comments:</b>
+Your “FAI.me / Build your own” allows me to build simple, headless, command line servers running some
+custom SSD settings to reduce writes, Postfix, Unattended updates, Smartmontools, Lm-sensors, and Folding at Home
+project software on a collection of various machines, more quickly saving my time. (I was so-o-o tired of answers all the
+Debian install settings during the installation process.) I would be glad to help you in any way. I have been open source
+based for about 25 years. Thank you.
+</pre> <HR>
+
+
 <b>From:</b> anonymous
 <br><b>Date:</b> Fri, 01 Sep 2023 09:48:50 +0000
 <pre>
@@ -6004,7 +6037,7 @@ Which types of hosts are you installing with fai? Desktops, server (all kinds of
 </pre> <hr>
 
 
-<a id=sanger2></a>
+<pre id="sanger"> </pre>
 <b>From:</b> Tim Cutts, tjrc ad sanger dit ac dit uk
 <br><b>Date:</b> Tue, 19 Jun 2007 17:07:50 +0100
 <pre>
@@ -7242,7 +7275,6 @@ prepares expert reports and opinions on questions of food safety and
 consumer health protection on the basis of internationally recognised
 scientific assessment criteria.
 </pre> <hr>
-<a id=sanger></a>
 <b>From:</b> Guy Coates, gmpc =a_t sanger.ac.uk
 <br><b>Date:</b> Tue, 4 Apr 2006 09:41:19 +0100 (BST)
 <pre>
