--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -42,12 +42,10 @@
 	    <h5>
 	      FAI.me. Build your own installation ISO for <b>Ubuntu</b>
 	    </h5>
-            <h6>
-              <ul class="browser-default">
+              <ul style="font-size: 120%" class="browser-default">
                 <li><a href="../FAIme">Debian version</a><p></li>
                 <li><a href="../FAIme/cloud">Cloud images</a></li>
               </ul>
-            </h6>
 
 	    <div class="divider"></div>
 	    <p>
