--- a/FAIme/key-distr-desk-pkgs.html
+++ b/FAIme/key-distr-desk-pkgs.html
@@ -7,6 +7,7 @@
 		<select class="browser-default" name="keyboard">
 		  <option value="gb">English UK</option>
 		  <option value="us" selected="selected">English US</option>
+                  <option value="et">Estonian / Eesti keel</option>
                   <option value="fi">Finnish / Suomi</option>
 		  <option value="fr">French / Français</option>
 		  <option value="de">German / Deutsch</option>
@@ -32,8 +33,6 @@
 	      <div class="col s12 m6">
 		<div class="input-field">
 		  <select class="browser-default" name="suite">
-		    <option value="buster">Debian 10 buster (oldoldstable)
-		    </option>
 		    <option value="bullseye">Debian 11 bullseye (oldstable)
 		    </option>
 		    <option value="bookworm" selected="selected">Debian 12 bookworm (stable)
