--- a/references/index.html
+++ b/references/index.html
@@ -101,7 +101,7 @@
           <img class="imgframe" alt="FAI user" src="pics/opensides.png"></a>
         <a href="https://www.gl-systemhaus.de">
           <img class="imgframe" alt="FAI user" src="pics/gundl.png"></a>
-        <a href="https://www.ska.ac.za">
+        <a href="https://www.sarao.ac.za">
           <img class="imgframe" alt="FAI user" src="pics/ska.png"></a>
         <a href="https://iils.de">
           <img class="imgframe" alt="FAI user" src="pics/iils.png"></a>
