--- a/fai-cd/index.html
+++ b/fai-cd/index.html
@@ -46,10 +46,11 @@
           <div class="col s12 m10 valign-wrapper">
             <div class="col m5 s12 valign">
               <a href="faicd64-ubuntu-only_6.2.2.iso" class="waves-effect waves-light btn fai-btn black-text">
-                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.7GB)</a>
+                <i class="material-icons left">download</i>FAI ISO Ubuntu (1.9GB)</a>
             </div>
             <p class="col m7 s12">
-              This image only installs Ubuntu 22.04 LTS. All packages are included.
+              This image only installs Ubuntu 24.04 LTS. You can
+              select a desktop or a server installation. All packages are included.
             </p>
           </div>
 
@@ -73,7 +74,7 @@
             <b>If none of the ISOs fit your needs, use the
               <a href="/FAIme">FAI.ME build service</a>.
             </b>
-            This also supports Debian 10 with a backports kernel.</p>
+            This also supports Debian 11 and 12 with a backports kernel.</p>
 
         </div>
 
@@ -153,12 +154,12 @@ dd if=faicd64-large_6.2.2.iso of=/dev/sdx
           </div>
         </div>
 
-        <div class="row">
+<!--         <div class="row">
           <div class="col s12">
             <h5><a href="fai-cd-old.html">Older ISO Images for FAI<a/></h5>
           </div>
         </div>
-
+-->
       </div>
     </main>
 
