add feature item

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.h
               </li>
               <li>
                 <span class="valign-wrapper">
-                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk image for OpenStack, KVM, VirtualBox, VMware, Azure, EC2, GCE</span></span>
+                  <i class="material-icons">done</i>&nbsp;<span>Creation of custom disk images for OpenStack, KVM, VirtualBox, VMware, Azure, EC2, GCE</span></span>
+              </li>
+              <li>
+                <span class="valign-wrapper">
+                  <i class="material-icons">done</i>&nbsp;<span>Supports creation of custom live ISOs</span></span>
               </li>
               <li>
                 <span class="valign-wrapper">
