--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -40,7 +40,8 @@
 	<div class="row">
 	  <div class="col s12">
 	    <h5>
-	      FAI.me. Build your own installation ISO for <b>Ubuntu</b>
+	      FAI.me. Build your own installation ISO for <b>Ubuntu 24.04</b>
+            <!--#include virtual="bug.html" -->
 	    </h5>
               <ul style="font-size: 120%" class="browser-default">
                 <li><a href="../FAIme">Debian version</a><p></li>
