--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
             <h5>News</h5>
 
 <ul class="col s12 browser-default">
+<li>[June 11, 2024] The FAIme service now supports Ubuntu 24.04</li>
 <li>[Mar 9, 2024] <a href="/fai-cd/">New ISO images</a> availabe using FAI 6.2.2</li>
 <li>[Jan 21, 2024] FAI 6.2 <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2024-January/013148.html">released</a></li>
 <li>[Jun 10, 2023] A <a href="/fai-cd/debian12-live-xfce.iso">new Debian Live ISO images</a>
 build by FAI with XFCE desktop</li>
-<li>[April 11, 2023] The FAIme image builder now supports Ubuntu</li>
 <li> <b>
 I <a href="https://lists.uni-koeln.de/pipermail/linux-fai/2017-November/011869.html">announced</a> the <a href="/FAIme">FAI.me</a> service</b>
 </li>
