add new include file

--- a/FAIme-ubuntu/index.html
+++ b/FAIme-ubuntu/index.html
@@ -113,39 +113,7 @@
 
 	    <div id="adv3" style="display: none;">
 
-	      <div class="col s12 m10">
-		<p class="col s12 m4">
-		  Custom script to put into /usr/local/bin/
-		</p>
-                <div class="col s12 m6 input-field">
-                  <label for="postinst"> <input size="2"      id="postinst" type="file" accept=".sh,.sh.gz" name="postinst" style="margin-right: -50px">
-                  </label>
-		</div>
-	      </div>
-	      <div class="col s12 m10">
-		<p class="col s12 m4">
-                  Execute this script during first boot
-		</p>
-
-                <div class="col s12 m6 input-field">
-		  <label>
-                    <input type="checkbox" class="filled-in" name="rclocal" value="1" checked >
-                    <span> </span>
-
-                  </label>
-		</div>
-	      </div>
-
-
-	      <div class="col s12 m10">
-		<p class="col s12 m4">
-		  Grub options (optional)
-		</p>
-		<div class="col s12 m6 input-field">
-		  <input type="text" id="cmdline" name="cmdline">
-		  <span class="helper-text">Will be used during installation and for the new system</span>
-		</div>
-	      </div>
+              <!--#include virtual="../FAIme/postinst-grub.html" -->
 
 	      <div class="col s12 m10">
 
